Fix alignment issue in summary list

--- a/frontend/assets/scss/main.scss
+++ b/frontend/assets/scss/main.scss
@@ -123,7 +123,7 @@ h2 {
 .summary-list {
   display: grid;
   grid-gap: 2em;
-  grid-template-columns: repeat(auto-fit, 285px);
+  grid-template-columns: repeat(auto-fit, 300px);
   grid-auto-rows: 1fr;
   justify-content: space-between;
 
